ConsultingHub/force-app/main/default/objects/Business_Priority_Product_Features__c/Business_Priority_Product_Features__c.object-meta.xml
<CustomObject>
    <label>Business Priority - Product Features</label>
    <nameField>
        <displayFormat>BPF-{000000}</displayFormat>
        <label>Business Priority - Product Features Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Priority - Product Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>