ConsultingHub/force-app/main/default/objects/Business_Priority_Product_Features__c/fields/Business_Priority__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority__c</fullName>
    <label>Business Priority</label>
    <referenceTo>Business_Priorities__c</referenceTo>
    <relationshipLabel>Product Features</relationshipLabel>
    <relationshipName>Business_Priority_Product_Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>