ConsultingHub/force-app/main/default/objects/Business_Priority_Product_Features__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Business Priority Id + Product Feature Id</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>