ConsultingHub/force-app/main/default/objects/Business_Priority_Product_Features__c/fields/Product_Feature__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature__c</fullName>
    <label>Product Feature</label>
    <referenceTo>Product_Feature__c</referenceTo>
    <relationshipLabel>Business Priorities</relationshipLabel>
    <relationshipName>Business_Priority_Product_Features</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>