ConsultingHub/force-app/main/default/objects/Business_Priority_Product_Features__c/fields/Product_Feature_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature_Business_Unit__c</fullName>
    <formula>TEXT(Product_Feature__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Feature Business Unit</label>
    <type>Text</type>
</CustomField>