ConsultingHub/force-app/main/default/objects/Business_Priority_Product_Features__c/fields/Product_Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature_Name__c</fullName>
    <formula>Product_Feature__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Feature Name</label>
    <type>Text</type>
</CustomField>