ConsultingHub/force-app/main/default/objects/Business_Priority_Product_Features__c/fields/Product_Feature_Product_Subarea__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature_Product_Subarea__c</fullName>
    <formula>TEXT(Product_Feature__r.Product_Sub_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Feature Product Subarea</label>
    <type>Text</type>
</CustomField>